--- a/style.css
+++ b/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "fira sans";
+  src: url(va9A4kDNxMZdWfMOD5VvkrCqUT3fcWTP.ttf);
+}
+
 *{
     margin: 0;
     padding: 0;
